--- a/Flatfy V3/index.html
+++ b/Flatfy V3/index.html
@@ -205,66 +205,52 @@
 
 			<div class="row">
 
-				<div class="container col-sm-6">
+				<div class="row tworow">
 
-                    <!--<div class="pull-right col-sm-8 wow fadeInLeftBig">
-                        <div id="owl-demo" class="owl-carousel">
-                            <a href="https://fotki.yandex.ru/users/tibetanmastiff-by/view/1977723/" class="image-link">
-                                <div class="item">
-                                    <img  class="img-responsive img-rounded" src="img/Nepal.jpg" alt="">
-                                </div>
-                            </a>
-                            <a href="img/Непал.jpg" class="image-link">
-                                <div class="item">
-                                    <img  class="img-responsive img-rounded" src="img/Непал.jpg" alt="">
-                                </div>
-                            </a>
-                            <a href="img/Непал.jpg" class="image-link">
-                                <div class="item">
-                                    <img  class="img-responsive img-rounded" src="img/Непал_2.jpg" alt="">
-                                </div>
-                            </a>
-                        </div>
-                    </div>-->
+					<div class="container col-sm-6">
 
-					<div class="col-sm-3 section-heading"  >
-
-						<div class="name_pappy">
-							<b>Кличка</b>
+						<div class="col-sm-9">
+							<img  class="img-responsive img-rounded" href="https://fotki.yandex.ru/users/tibetanmastiff-by/view/1977723/" src="https://img-fotki.yandex.ru/get/897810/372334255.4/0_1e2d80_a74848be_L.jpg"  title="Непал Хариш и Лин-Ян" alt="Непал Хариш и Лин-Ян" border="0"/>
 						</div>
 
-						<div>
-							</br><b>Цвет:</b> Черный подпал </br> <b>Лента:</b> </br> <b>Вес:</b> </br> <b>Цена:</b> </p>
+						<div class="col-sm-3 section-heading"  >
+
+							<div class="name_pappy">
+								<b>Кличка</b>
+							</div>
+
+							<div>
+								</br><b>Цвет:</b> Черный подпал </br> <b>Лента:</b> </br> <b>Вес:</b> </br> <b>Цена:</b> </p>
+							</div>
+							</br>
+							<p>
+								<a class="btn btn-embossed btn-info" target = "_blank" href="https://tibetanmastiff.by/%D0%A4%D0%BE%D1%82%D0%BE%D0%B3%D0%B0%D0%BB%D0%B5%D1%80%D0%B5%D1%8F/" role="button">Фото</a>
+							</p>
 						</div>
-						</br>
-						<p>
-							<a class="btn btn-embossed btn-info" target = "_blank" href="https://tibetanmastiff.by/%D0%A4%D0%BE%D1%82%D0%BE%D0%B3%D0%B0%D0%BB%D0%B5%D1%80%D0%B5%D1%8F/" role="button">Фото</a>
-						</p>
+					</div>
+
+					<div class="container col-sm-6">
+
+						<div class="col-sm-9">
+							<img  class="img-responsive img-rounded" href="https://fotki.yandex.ru/users/tibetanmastiff-by/view/1977723/" src="https://img-fotki.yandex.ru/get/897810/372334255.4/0_1e2d80_a74848be_L.jpg"  title="Непал Хариш и Лин-Ян" alt="Непал Хариш и Лин-Ян" border="0"/>
+						</div>
+
+						<div class="col-sm-3 section-heading"  >
+
+							<div class="name_pappy">
+								<b>Кличка</b>
+							</div>
+
+							<div>
+								</br><b>Цвет:</b> Черный подпал </br> <b>Лента:</b> </br> <b>Вес:</b> </br> <b>Цена:</b> </p>
+							</div>
+							</br>
+							<p>
+								<a class="btn btn-embossed btn-info" target = "_blank" href="https://tibetanmastiff.by/%D0%A4%D0%BE%D1%82%D0%BE%D0%B3%D0%B0%D0%BB%D0%B5%D1%80%D0%B5%D1%8F/" role="button">Фото</a>
+							</p>
+						</div>
 					</div>
 				</div>
-
-				<div class="container col-sm-6">
-
-					<div class="col-sm-9">
-						<img  class="img-responsive img-rounded" href="https://fotki.yandex.ru/users/tibetanmastiff-by/view/1977723/" src="https://img-fotki.yandex.ru/get/897810/372334255.4/0_1e2d80_a74848be_L.jpg"  title="Непал Хариш и Лин-Ян" alt="Непал Хариш и Лин-Ян" border="0"/>
-					</div>
-
-					<div class="col-sm-3 section-heading"  >
-
-						<div class="name_pappy">
-							<b>Кличка</b>
-						</div>
-
-						<div>
-							</br><b>Цвет:</b> Черный подпал </br> <b>Лента:</b> </br> <b>Вес:</b> </br> <b>Цена:</b> </p>
-						</div>
-						</br>
-						<p>
-							<a class="btn btn-embossed btn-info" target = "_blank" href="https://tibetanmastiff.by/%D0%A4%D0%BE%D1%82%D0%BE%D0%B3%D0%B0%D0%BB%D0%B5%D1%80%D0%B5%D1%8F/" role="button">Фото</a>
-						</p>
-					</div>
-				</div>
-			</div>
 
 			<div class="row tworow">
 
