--- a/Flatfy V3/index.html
+++ b/Flatfy V3/index.html
@@ -66,12 +66,34 @@
                 <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Страж Долины</h1>
                 <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Питомник породы тибетский мастиф</h3>
                 <ul class="list-inline intro-social-buttons">
-                    <li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn"
+
+                    <li>
+                        <div class="swing">
+                            <a href="https://vk.com/"><img src="img/icon/vk.png"> </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="swing">
+                            <a href="https://vk.com/"><img src="img/icon/fb.png"> </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="swing">
+                            <a href="https://vk.com/"><img src="img/icon/insta.png"> </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="swing">
+                            <a href="https://vk.com/"><img src="img/icon/contact.png"> </a>
+                        </div>
+                    </li>
+
+                    <!--<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn"
                            data-wow-delay="0.8s"><span class="network-name">VK</span></a></li>
                     <li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn"
                            data-wow-delay="0.8s"><span class="network-name">Facebook</span></a></li>
-                    <li id="download"><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn"
-                                         data-wow-delay="1.2s"><span class="network-name">Контакты</span></a></li>
+                    <li id="download"><a href="#contact" class="btn  btn-lg mybutton_standard wow swing wow fadeIn"
+                                         data-wow-delay="1.2s"><span class="network-name">Контакты</span></a></li>-->
                 </ul>
             </div>
             <!-- /.container -->
