--- a/Flatfy V3/index.html
+++ b/Flatfy V3/index.html
@@ -74,17 +74,17 @@
                     </li>
                     <li>
                         <div class="swing">
-                            <a href="https://vk.com/"><img src="img/icon/fb.png"> </a>
+                            <a href="https://vk.com/"><img src="img/icon/FaceBook.png"> </a>
                         </div>
                     </li>
                     <li>
                         <div class="swing">
-                            <a href="https://vk.com/"><img src="img/icon/insta.png"> </a>
+                            <a href="https://vk.com/"><img src="img/icon/Instagram.png"> </a>
                         </div>
                     </li>
                     <li>
                         <div class="swing">
-                            <a href="https://vk.com/"><img src="img/icon/contact.png"> </a>
+                            <a href="https://vk.com/"><img src="img/icon/Contact.png"> </a>
                         </div>
                     </li>
 
